# CS457

./: .clang-format  .clang-tidy  .gitignore
bank/: CMakeLists.txt
bank/include/: branch.hpp  channel.hpp  common.hpp  controller.hpp  message.hpp  netutils.hpp  server.hpp  snapshot.hpp
bank/proto/: CMakeLists.txt  bank.proto
bank/src/: branch.cpp  branch_main.cpp  channel.cpp  common.cpp  controller.cpp  controller_main.cpp  message.cpp  netutils.cpp  server.cpp  snapshot.cpp
bank/test/: branch_test.cpp
chord/: CMakeLists.txt  Pipfile  chord.thrift  init
chord/include/: FileStore.h  chord.h  chord_types.h  debug.h  netutils.h  sha256.hpp
chord/src/: FileStore.cpp  FileStore_server.cpp  chord_types.cpp  netutils.cpp  sha256.cpp
chord/test/: chord_test.cpp
http/: CMakeLists.txt
http/include/: debug.hpp  file.hpp  http.hpp  logger.hpp  mimedb.hpp  server.hpp  socket.hpp
http/src/: http.cpp  logger.cpp  main.cpp  mimedb.cpp  server.cpp  socket.cpp
http/test/: test.cpp
kv/: .clang-tidy  CMakeLists.txt  Makefile  cfg.json  rep1.json  rep2.json  rep3.json  rep4.json
kv/client/: CMakeLists.txt
kv/client/include/: client.hpp
kv/client/src/: client.cpp
kv/net/: CMakeLists.txt
kv/net/channel/: CMakeLists.txt
kv/net/channel/include/: channel.hpp
kv/net/messaging/: CMakeLists.txt
kv/net/messaging/include/: message.hpp
kv/proto/: CMakeLists.txt  client.proto  hint.proto  server.proto
kv/server/: CMakeLists.txt
kv/server/include/: config.hpp  coordinator.hpp  log.hpp  replica.hpp
kv/server/src/: config.cpp  coordinator.cpp  log.cpp  replica.cpp  server.cpp
kv/server/test/: config_test.cpp  log_test.cpp
